# rokae_ros2

./: .gitignore  CHANGELOG.md  README.md  debug.md  rokae ros2使用手册.md
XME7/: CMakeLists.txt  package.xml
XME7/11/: .setup_assistant  CMakeLists.txt
XME7/11/config/: XME7.ros2_control.xacro  (+3 more)
XME7/launch/: display.launch  gazebo.launch
XME7/meshes/: base_link.STL  link3.STL  link4.STL  link5.STL
XME7/urdf/: XME7.urdf
rokae/rokae_hardware/: CMakeLists.txt  package.xml  rokae_hardware_interface.xml
rokae/rokae_msgs/: CMakeLists.txt
rokae_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rokae_description/config/: controllers.yaml
rokae_description/launch/: rokae_gazebo.launch.py  rokae_gazebo_no.launch.py  test_model.launch.py  xMateCR35.rviz  xMateSR3.rviz
rokae_description/scripts/: gui_to_joint_trajectory.py
rokae_description/urdf/: AR5-5_07L-W4C4A2.ros2_control.xacro  AR5-5_07L-W4C4A2.urdf.xacro  AR5-5_07L-W4C4A2.urdf.xacro_Gazebo.urdf.xacro  AR5-5_07R-W4C4A2.ros2_control.xacro  AR5-5_07R-W4C4A2.urdf.xacro  AR5-5_07R-W4C4A2.urdf.xacro_Gazebo.urdf.xacro  xMate.urdf.xacro  xMateCR12.ros2_control.xacro  xMateCR12.urdf.xacro  xMateCR12_Gazebo.urdf.xacro  xMateCR18.ros2_control.xacro  xMateCR18.urdf.xacro  xMateCR18_Gazebo.urdf.xacro  xMateCR20.ros2_control.xacro  xMateCR20.urdf.xacro  xMateCR20_Gazebo.urdf.xacro  xMateCR35.ros2_control.xacro  xMateCR35.urdf.xacro  xMateCR35_Gazebo.urdf.xacro  xMateCR7.ros2_control.xacro  xMateCR7.urdf.xacro  xMateCR7_Gazebo.urdf.xacro  xMateER3.ros2_control.xacro  xMateER3.urdf.xacro  xMateER3_Gazebo.urdf.xacro  xMateER7.ros2_control.xacro  xMateER7.urdf.xacro  xMateER7_Gazebo.urdf.xacro  xMatePro3.ros2_control.xacro  xMatePro3.urdf.xacro  xMatePro3_Gazebo.urdf.xacro  xMatePro7.urdf.xacro  xMatePro7_Gazebo.urdf.xacro  xMateSR3.ros2_control.xacro  xMateSR3.urdf.xacro  xMateSR3_Gazebo.urdf.xacro  xMateSR4.ros2_control.xacro  xMateSR4.urdf.xacro  xMateSR4_Gazebo.urdf.xacro  xMateSR5.ros2_control.xacro  (+3 more)
rokae_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
rokae_example/launch/: cartesian_s_line.launch.py  follow_cart_position.launch.py  follow_joint_position.launch.py  joint_position_control.launch.py  joint_s_line.launch.py  servoj_demo.launch.py
rokae_example/src/: cartesian_s_line.cpp  follow_cart_position.cpp  joint_position_control.cpp  joint_s_line.cpp  servoj_demo.cpp
rokae_hardware/: CHANGELOG.rst  CMakeLists.txt  package.xml  rokae_hardware_interface.xml
rokae_hardware/config/: xMateAR5L_controllers.yaml  xMateAR5R_controllers.yaml  xMateAR5R_real_controllers.yaml  xMateCR12_controllers.yaml  xMateCR18_controllers.yaml  xMateCR20_controllers.yaml  xMateCR20_real_controllers.yaml  xMateCR35_controllers.yaml  xMateCR7_controllers.yaml  xMateCR7_real_controllers.yaml  xMateER3_controllers.yaml  xMateER7_controllers.yaml  xMateER7_real_controllers.yaml  xMatePro3_controllers.yaml  xMatePro3_real_controllers.yaml  xMatePro7_controllers.yaml  xMatePro7_real_controllers.yaml  xMateSR3_controllers.yaml  xMateSR3_real_controllers.yaml  xMateSR4_controllers.yaml  xMateSR4_real_controllers.yaml  xMateSR5_controllers.yaml  xMateSR5_real_controllers.yaml  xMate_controllers.yaml
rokae_hardware/launch/: cartesian_s_line.launch.py  controll_movej.launch.py  follow_cart_position.launch.py  follow_joint_position.launch.py  gazebo_moveit.launch.py  joint_position_control.launch.py  joint_s_line.launch.py  real_moveit.launch.py  rokae_moveit_launch.py  servoj_demo.launch.py  test_model.launch.py  xMate_moveit_config.launch.py  xMate_moveit_launch.py
rokae_hardware/scripts/: record_sim.sh  replay_sim.sh
rokae_hardware/sdk/: CMakeLists.txt
rokae_hardware/src/: connect.cpp  connect_test.cpp  follow_joint_position.cpp  movej_moveit_test.cpp  rokae_driver.cpp  rokae_driver7.cpp  rokae_hardware_interface.cpp  scene_service.cpp  stop_motion_demo.cpp  thread_test.cpp  硬件接口备份（只启动六轴）
rokae_hardware/srv/: SceneService.srv
rokae_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rokae_msgs/srv/: CalculateFK.srv  CalculateIK.srv  DragCon.srv  GetDI.srv  GetDO.srv  GetRobotInfo.srv  MoveC.srv  MoveJ.srv  ReadRegister.srv  SetDO.srv
rokae_xMateAR5L_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rokae_xMateAR5L_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml  simple_moveit_controllers.yaml  xMateAR5L.srdf
rokae_xMateAR5L_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
rokae_xMateCR20_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rokae_xMateCR20_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml  simple_moveit_controllers.yaml  xMateCR20.ros2_control.xacro  xMateCR20.srdf  xMateCR20.urdf.xacro
rokae_xMateCR20_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
rokae_xMateCR35_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
rokae_xMateCR35_moveit_config/config/: gazebo_xMateCR35.urdf  joint_limits.yaml  simple_moveit_controllers.yaml  xMateCR35.srdf
rokae_xMateCR35_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
rokae_xMateCR35_moveit_config/rviz/: moveit.rviz
rokae_xMateCR7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rokae_xMateCR7_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  xMateCR7.srdf
rokae_xMateSR5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+338 files in other folders)
